--- a/mrrs/templates/index.html
+++ b/mrrs/templates/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Title</title>
-    <link rel="stylesheet" href="/static/bootstrap-3.3.7-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="/static/bootstrap-3.3.7-dist/css/bootstrap-datetimepicker.min.css">
+    {{ url_for('static',filename = 'bootstrap-3.3.7-dist/css/bootstrap.css') }}
+    {{ url_for('static',filename = 'bootstrap-3.3.7-dist/css/bootstrap-datetimepicker.min.css') }}
     <style>
         .active {
             color: gold;
