--- a/mrrs/templates/login.html
+++ b/mrrs/templates/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>登录界面</title>
-    <link rel="stylesheet" href="static/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    {{ url_for('static',filename = 'bootstrap-3.3.7-dist/css/bootstrap.min.css') }}
     <style>
         body {
             background-color: #eeeeee;
